<resources>
    <string name="app_name">Poto</string>

    <string-array name="nav_items">
        <item>Festivals</item>
        <item>Vendors</item>
        <item>Food</item>
        <item>Drinks</item>
    </string-array>

    <string name="facebook_application_id" translatable="false">1015818175170601</string>

    <string name="home">Home</string>
    <string name="festivals">Festivals</string>
    <string name="vendors">Vendors</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>

    <string name="user">User</string>
    <string name="signout">Sign Out</string>
</resources>
